# napari-sp8-tracking

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_sp8_tracking/: __init__.py  _widget.py  napari.yaml
src/napari_sp8_tracking/_tests/: test_widget.py
src/napari_trackpy/: __init__.py  _widget.py  _writer.py  napari.yaml
